# url_shortener

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.dev  pyproject.toml
backend/url_shortener/: api.py  settings.py  urls.py
backend/url_shortener/models/url/: apps.py  models.py
backend/url_shortener/models/url/graphql/: mutations.py  queries.py  types.py
backend/url_shortener/models/url/migrations/: 0001_initial.py  0002_rename_link_url_original_link.py
frontend/: Dockerfile.dev  package-lock.json  package.json
frontend/pages/: _app.tsx  index.tsx
frontend/src/: App.css  App.js  index.css  index.js
frontend/src/api/: mutations.js  queries.js
frontend/src/pages/: HomePage.jsx  Redirect.jsx
