[tool.poetry]
name = "url_shortener"
version = "0.1.0"
description = ""
authors = ["Edward Fu <edwardfu850808@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"
graphene-django = "^3.0.0"
django-graphql-playground = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
